ja/11.0/admin/accesstoken-guide.rst
============
アクセストークン
============

概要
========

アクセストークン設定ページではアクセストークンを管理します。

管理方法
========

表示方法
--------

下図のアクセストークンの設定一覧ページを開くには、左メニューの[システム>アクセストークン] をクリックします。

|image0|

編集するには設定名をクリックします。

設定の作成
----------

アクセストークンの設定ページを開くには新規作成ボタンをクリックします。

|image1|

設定項目
--------

名前
::::

このアクセストークンを説明するための名前を指定します。

パーミッション
::::

アクセストークンのパーミッションを設定します。
「{user/group/role}name」形式で記述します。
たとえば、developerグループに属するユーザーが検索結果を表示するためには、パーミッションは「{group}developer」を設定します。

パラメーター名
:::::

検索クエリーとしてパーミッションを指定する場合のリクエストパラメータ名を指定します。

有効期限
::::::

アクセストークンの有効期限を指定します。

設定の削除
--------------------

一覧ページの設定名をクリックし、削除ボタンをクリックすると確認画面が表示されます。
削除ボタンを押すと設定が削除されます。



.. |image0| image:: ../../../resources/images/ja/11.0/admin/accesstoken-1.png
.. |image1| image:: ../../../resources/images/ja/11.0/admin/accesstoken-2.png
